tests/run/error_generic_field.out
tests/run/error_generic_field.em:4:22: error: field value type does not match the declared field
